bk_ida/gccida/g2/expand_complex_abs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2912:26: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_complex_abs( machine_mode mode, rtx op0, rtx target, int unsignedp) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2914:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v5; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2919:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2926:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2930:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v22; // r15 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2931:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2945:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 this_abs_optab; // [rsp+10h] [rbp-78h] 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2946:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 this_abs_optaba; // [rsp+10h] [rbp-78h] 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2948:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+28h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2949:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v42; // [rsp+2Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2951:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // [rsp+30h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2952:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // [rsp+30h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2954:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+38h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2956:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0a; // [rsp+38h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2960:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2963:65: error: called object type 'const enum mode_class [59]' is not a function or function pointer
submode = mode_for_size( 8 * mode_unit_size[mode], ( mode_class)( ( v5 != MODE_COMPLEX_INT) + 1), 0); 
                                                   ~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2981:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:2987:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v46 = insn_data_0[insn_code].operand; 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/optabs.c:3016:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v15 = insn_data_0[insn_code].genfun( v11, v13); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_complex_abs/src/obj/optabs.o] Error 1
